# indie-ideate

./: README.md  pyproject.toml
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: dashboard.py  idea_validator.py  onboarding.py  validation_engine.py  websocket.py
tests/: test_dashboard.py  test_idea_validator.py  test_onboarding.py  test_validation_engine.py  test_websocket.py
